// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H H uppercase 1`] = `
<h1
  className="Text__Test__root Text__Test--uppercase Text__Test---vol-1-8"
>
  I am Groot!
</h1>
`;

exports[`H H1 1`] = `
<h1
  className="Text__Test__root Text__Test---vol-1-8"
>
  I am Groot!
</h1>
`;

exports[`H H2 1`] = `
<h2
  className="Text__Test__root Text__Test---vol-1-7"
>
  I am Groot!
</h2>
`;

exports[`H H3 1`] = `
<h3
  className="Text__Test__root Text__Test---vol-1-6"
>
  I am Groot!
</h3>
`;

exports[`H H3 volume 1`] = `
<h3
  className="Text__Test__root Text__Test---vol-1-5"
>
  I am Groot!
</h3>
`;

exports[`H H4 1`] = `
<h4
  className="Text__Test__root Text__Test---vol-1-5"
>
  I am Groot!
</h4>
`;

exports[`H H5 1`] = `
<h5
  className="Text__Test__root Text__Test---vol-1-4"
>
  I am Groot!
</h5>
`;

exports[`H H6 1`] = `
<h6
  className="Text__Test__root Text__Test---vol-1-4"
>
  I am Groot!
</h6>
`;

exports[`P P 1`] = `
<p
  className="Text__Test__root Text__Test---vol-1-3"
>
  I am Groot!
</p>
`;

exports[`P P truncate 1`] = `
<p
  className="Text__Test__root Text__Test--truncate Text__Test---vol-1-3 Text__Test---lineClamp-1-2"
>
  The cryosphere refers to frozen components of the Earth system. Around 10% of Earth's land area is covered by glaciers or ice sheets. The ocean and cryosphere support unique habitats, and are interconnected with other components of the climate system through global exchange of water, energy and carbon.
</p>
`;

exports[`P P vol weight 1`] = `
<p
  className="Text__Test__root Text__Test---weight-1-2 Text__Test---vol-1-8"
>
  vol 8 Text
</p>
`;

exports[`P P volume 1`] = `
<p
  className="Text__Test__root Text__Test---vol-1-5"
>
  I am Groot!
</p>
`;

exports[`Text Text 1`] = `
<h1
  className="Text__Test__root Text__Test---vol-1-3"
>
  I am Groot!
</h1>
`;

exports[`Text Text as truncate vol 1`] = `
<div
  className="Text__Test__root Text__Test--truncate Text__Test---lineClamp-1-6"
>
  <p
    className="Text__Test__root Text__Test---vol-1-3"
  >
    The cryosphere refers to frozen components of the Earth system. Around 10% of Earth's land area is covered by glaciers or ice sheets. The ocean and cryosphere support unique habitats, and are interconnected with other components of the climate system through global exchange of water, energy and carbon.
  </p>
  <p
    className="Text__Test__root Text__Test---vol-1-3"
  >
    The cryosphere refers to frozen components of the Earth system. Around 10% of Earth's land area is covered by glaciers or ice sheets. The ocean and cryosphere support unique habitats, and are interconnected with other components of the climate system through global exchange of water, energy and carbon.
  </p>
</div>
`;

exports[`Text Text volume 1`] = `
<h3
  className="Text__Test__root Text__Test---vol-1-6"
>
  I am Groot!
</h3>
`;
